# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NTTEngine/: CMakeLists.txt
NTTEngine/components/: CMakeLists.txt
NTTEngine/components/NTTEngineCore/: CMakeLists.txt
NTTEngine/components/NTTEngineCore/include/NTTEngineCore/: Timestep.hpp
NTTEngine/components/NTTEngineCore/src/: Timestep.cpp
NTTEngine/components/NTTEngineEventSystem/: CMakeLists.txt
NTTEngine/components/NTTEngineEventSystem/include/NTTEngineEventSystem/: EventDefine.hpp  EventDispatcher.hpp  EventType.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  MouseClickEvent.hpp  MouseMoveEvent.hpp  NTTEngineEventSystem.hpp
NTTEngine/components/NTTEngineEventSystem/src/: EventDispatcher.cpp
NTTEngine/components/NTTEngineImGuiLayerSystem/: CMakeLists.txt
NTTEngine/components/NTTEngineImGuiLayerSystem/include/NTTEngineImGuiLayerSystem/: IImGuiApplication.hpp  ImGuiApplication.hpp  ImGuiLayer.hpp  ImGuiViewportApplication.hpp  NTTEngineImGuiLayerSystem.hpp  PreInclude.hpp  WindowDemoApplication.hpp
NTTEngine/components/NTTEngineImGuiLayerSystem/src/: ImGuiApplication.cpp  ImGuiLayer.cpp  ImGuiViewportApplication.cpp  PerformanceApplication.cpp  WindowDemoApplication.cpp
NTTEngine/components/NTTEngineImGuiTools/: CMakeLists.txt
NTTEngine/components/NTTEngineImGuiTools/include/NTTEngineImGuiTools/: ImGuiImage.hpp  ImGuiSelectableVector.hpp  NTTEngineImGuiTools.hpp
NTTEngine/components/NTTEngineImGuiTools/src/: ImGuiImage.cpp
NTTEngine/components/NTTEngineLayerSystem/: CMakeLists.txt
NTTEngine/components/NTTEngineLayerSystem/src/: Layer.cpp  LayerStack.cpp
NTTEngine/components/NTTEngineLog/: CMakeLists.txt
NTTEngine/components/NTTEngineLog/include/NTTEngineLog/: Logging.hpp  (+1 more)
NTTEngine/components/NTTEngineLog/src/: Logging.cpp
NTTEngine/components/NTTEngineProfiling/: CMakeLists.txt
NTTEngine/components/NTTEngineProfiling/src/: NTTInstrument.cpp  NTTTimer.cpp
NTTEngine/components/NTTEngineRenderer/: CMakeLists.txt
NTTEngine/components/NTTEngineRenderer/src/: Camera.cpp  FrameBuffer.cpp  GraphicsContext.cpp  IndexBuffer.cpp  LayoutBuffer.cpp  Renderer2D.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  SubTexture.cpp  Texture.cpp  TextureMap.cpp  VertexArray.cpp  VertexBuffer.cpp
NTTEngine/components/NTTEngineThreadSystem/: CMakeLists.txt
NTTEngine/components/NTTEngineThreadSystem/src/: NTTThread.cpp
NTTEngine/components/NTTEngineUtils/: CMakeLists.txt
NTTEngine/components/NTTEngineUtils/src/: NTTRandom.cpp  NTTVec3.cpp  TimePlan.cpp
NTTEngine/components/NTTEngineWindow/: CMakeLists.txt
NTTEngine/components/NTTEngineWindow/src/: Window.cpp
NTTEngine/include/NTTEngine/: Application.hpp  Camera.hpp  Core.hpp  EntryPoint.hpp  IInput.hpp  IWindow.hpp  Layer.hpp  LayerStack.hpp  Logging.hpp  Macros.hpp  NTTEngine.hpp
NTTEngine/include/NTTEngine/Core/: Core.hpp
NTTEngine/include/NTTEngine/EventSystem/: Event.hpp  EventSystem.hpp  EventType.hpp  GameEndEvent.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  MouseClickEvent.hpp  MouseMoveEvent.hpp  MouseScrollEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp
NTTEngine/include/NTTEngine/Layers/: IImGuiRenderer.hpp  ImGuiApplication.hpp  ImGuiComponent.hpp  ImGuiLayer.hpp  Layers.hpp  PerformanceApplication.hpp  WindowDemoApplication.hpp
NTTEngine/include/NTTEngine/Renderer/: Camera.hpp  GraphicsContext.hpp  IndexBuffer.hpp  LayoutBuffer.hpp  Renderer.hpp  RendererAPI.hpp  RendererCommand.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
NTTEngine/include/NTTEngine/Threading/: ThreadArray.hpp  ThreadValue.hpp  Threading.hpp  ThreadingVariable.hpp
NTTEngine/include/NTTEngine/Utils/: TimePlan.hpp  Utils.hpp
NTTEngine/libs/: CMakeLists.txt
NTTEngine/resources/shaders/: basic.shader
NTTEngine/src/: Application.cpp  Camera.cpp  Core.cpp  EventDispatcher.cpp  GameEndEvent.cpp  IInput.cpp  ImGuiApplication.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  LayoutBuffer.cpp  Logging.cpp  NTTThread.cpp  NTTVec3.cpp  OpenGLContext.cpp  OpenGLIndexBuffer.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp  PerformanceApplication.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  TimePlan.cpp  Timestep.cpp  VertexArray.cpp  VertexBuffer.cpp  WinWindow.cpp  WindowDemoApplication.cpp  WindowInput.cpp
NTTEngine/vendors/: CMakeLists.txt
NTTEngine/vendors/imgui/: CMakeLists.txt
UARTProject/: CMakeLists.txt
UARTProject/components/: CMakeLists.txt
UARTProject/components/SerialFrame/: CMakeLists.txt
UARTProject/components/SerialFrame/src/: SerialCommandChangeBool.cpp  SerialCommandChangeFloat32.cpp  SerialCommandGetFloat32.cpp  SerialFrameManager.cpp
UARTProject/components/SerialUART/: CMakeLists.txt
UARTProject/components/SerialUART/src/: UARTConnection.cpp
UARTProject/components/UART/: CMakeLists.txt
UARTProject/components/UART/src/: UARTCom.cpp  UartChangeCoilCommand.cpp  UartChangeFloatCommand.cpp  UartGetCoilCommand.cpp  UartGetFloatCommand.cpp  UartSendStringCommand.cpp
UARTProject/include/: ESP32ImGuiApplication.hpp  OveralImGuiApplication.hpp  UartApplication.hpp  UartImGuiApplication.hpp
UARTProject/src/: ESP32ImGuiApplication.cpp  OveralImGuiApplication.cpp  UartApplication.cpp  UartImGuiApplication.cpp  main.cpp
VisionProject/: CMakeLists.txt
VisionProject/components/: CMakeLists.txt
VisionProject/components/ImageProcessing/: CMakeLists.txt
VisionProject/components/ImageProcessing/src/: ConvertImageToRGB.cpp  ConvertToBinary.cpp  ExtractByColor.cpp  ExtractByContour.cpp  ExtractCircularObject.cpp  FlipImage.cpp  ImageCutting.cpp  ImageProcessingContainer.cpp  ImageProcessingStep.cpp  ImageResize.cpp  PnPAlgorithm.cpp  QRDetector.cpp
VisionProject/components/MQTT/: CMakeLists.txt
VisionProject/components/MQTT/src/: ActionListener.cpp  MQTTCallback.cpp  MQTTClient.cpp
VisionProject/include/: ImageDisplay.hpp  MQTTWindow.hpp  VisionApplication.hpp  Webcam.hpp
VisionProject/src/: ImageDisplay.cpp  MQTTWindow.cpp  VisionApplication.cpp  Webcam.cpp  main.cpp
(+90 files in other folders)
