add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineThreadSystem)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineCore)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineUtils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineLog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineEventSystem)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineRenderer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineWindow)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineLayerSystem)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineImGuiTools)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/NTTEngineImGuiLayerSystem)